--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,14 @@
     width: 100%;
     height: 100%;
 }
+.tile{
+    height: 25vw;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: blue;
+    background-color: white
+}
+.nav-link{
+    color:gray;
+    background-color: white;
+}
