--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 .image{
     width: 100%;
     height: 100%;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
 }
 .tile{
     height: 25vw;
